# cryptofeed

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS.md  BINANCE_FUTURES.0  CHANGES.md  CLAUDE.md  COINBASE.0  CONTRIBUTING.md  FAQ.md  INSTALL.md  Install.md  LICENSE  MANIFEST.in  MIGRATION_SUMMARY.md  MODERNIZATION.md  Pipfile  README.md  README.rst  README_DEVELOPMENT.md  SECURITY.md  UV_COMMAND_ANALYSIS.md  UV_MIGRATION_STATUS.md  bitfinex.py  build-wheels.sh  config.yaml  demo.py  demo_clickhouse.py  demo_coingecko.py  demo_nbbo.py  feed.py  feedhandler.py  licenses-test.json  main.py  new.db  pip-audit-test.json  (+11 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE  SETUP_RULESETS.md  TRUNK_SETUP.md  WORKFLOW_SETUP.md  copilot-instructions.md  dependabot.yml  ruleset-feature-branches.json  ruleset-main-protection.json  ruleset-release-branches.json  ruleset-tag-protection.json
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: INDEX.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  WORKFLOW_ANALYSIS_SUMMARY.md  WORKFLOW_FIXES.md  WORKFLOW_GUIDE.md  WORKFLOW_MONITORING_PLAN.md  WORKFLOW_RUNTIME_ANALYSIS.md  ci.yml  code-quality.yml  codeql-analysis.yml  flake8.yml  lint.yml  performance.yml  release.yml  security.yml  tests.yml
.kiro/archive/: PROXY_SPEC_MIGRATION.md  README.md
.kiro/steering/: product.md  structure.md  tech.md
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml  .shellcheckrc  .yamllint.yaml  ruff.toml
cryptofeed/: __init__.py  bitfinex.py  callback.py  config.py  connection.py  connection_handler.py  defines.py  exceptions.py  exchange.py  exchanges.py  feed.py  feed_keys.yaml  feedhandler.py  feeds.py  gdax.py  instrument.py  log.py  nbbo.py  pairs.py  providers.py  proxy.py  raw_data_collection.py  rest.py  runner.py  standards.py  symbols.py  types.pyi  types.pyx  utils.py
cryptofeed.egg-info.break/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cryptofeed/auth/: bequant.py  binance.py  binance_delivery.py  binance_futures.py  gemini.py  kucoin.py  okcoin.py  okex.py
cryptofeed/backends/: __init__.py  _util.py  aggregate.py  arctic.py  backend.py  clickhouse.py  deltalake.py  elastic.py  gcppubsub.py  http.py  iggy.py  influxdb.py  kafka.py  mongo.py  mysql.py  postgres.py  quasar.py  quasardb.py  quest.py  rabbitmq.py  redis.py  socket.py  udp.py  victoriametrics.py  zmq.py
cryptofeed/binance/: binance.py  pairs.py
cryptofeed/bitfinex/: __init__.py  bitfinex.py  pairs.py
cryptofeed/bitmex/: __init__.py  bitmex.py
cryptofeed/bitstamp/: __init__.py  bitstamp.py  pairs.py
cryptofeed/bybit/: bybit.py
cryptofeed/coinbase/: __init__.py  coinbase.py  pairs.py
cryptofeed/coinbene/: coinbene.py
cryptofeed/deribit/:  test.py  deribit.py
cryptofeed/exchange/: ascendex.py  bequant.py  binance.py  binance_delivery.py  binance_futures.py  binance_jersey.py  binance_us.py  bitcoincom.py  bitfinex.py  bitflyer.py  bithumb.py  bitmax.py  bitmex.py  bitstamp.py  bittrex.py  blockchain.py  bybit.py  coinbase.py  coinbene.py  deribit.py  dsx.py  dydx.py  exx.py  ftx.py  ftx_us.py  gateio.py  gemini.py  hitbtc.py  huobi.py  huobi_dm.py  huobi_swap.py  huobi_us.py  kraken.py  kraken_futures.py  kucoin.py  okcoin.py  okex.py  phemex.py  poloniex.py  probit.py  (+1 more)
cryptofeed/exchanges/: __init__.py  ascendex.py  ascendex_futures.py  backpack_ccxt.py  bequant.py  binance.py  binance_delivery.py  binance_futures.py  binance_tr.py  binance_us.py  bitdotcom.py  bitfinex.py  bitflyer.py  bitget.py  bithumb.py  bitmex.py  bitstamp.py  bittrex.py  (+40 more)
datacheck/: basic_data_check.ipynb  cross_validation.ipynb
dataclean/: add.js  col_add.py  col_delete.py  config.py  define.py  rename.js
docs/: CoinGecko_symbols.md  README.md  api.md  auth_channels.md  book_validation.md  callbacks.md  clickhouse.md  config.md  dtypes.md  examples.md  exchange.md  high_level.md  iggy_backend.md  performance.md  rest.md
examples/: backpack_native_demo.py  clickhouse_tables.sql  demo.py  demo_arctic.py  demo_arctic_backend.py  demo_bequant.py  demo_bequant_and_hitbtc.py  demo_bequant_bitcoincom_hitbtc.py  demo_binance_authenticated.py  demo_binance_delivery.py  demo_binance_depth_intervals.py  demo_binance_futures.py  demo_binancetr.py  demo_bitfinex.py  demo_bitfinex_authenticated.py  demo_bitmex_config.py  demo_blockchain.py  demo_book_delta.py  demo_book_delta_simple.py  demo_bybit.py  demo_bybit_authenticated.py  demo_check_trade_timestamps.py  demo_clickhouse.py  demo_coingecko.py  demo_concurrent_proxy.py  demo_config.py  demo_custom_agg.py  demo_deltalake.py  demo_deribit.py  demo_deribit_authenticated.py  demo_dsx.py  demo_elastic.py  demo_existing_loop.py  demo_ftx.py  demo_ftx_funding.py  demo_ftx_us.py  demo_gateiofutures.py  demo_gcppubsub.py  demo_gemini_authenticated.py  demo_huobi_swap.py  (+45 more)
ipython_tests/: gdax_tests.ipynb
rest/: bitmex.py  config.yaml
sample_data/: ASCENDEX.ws.1.0  ASCENDEX_FUTURES.0  ASCENDEX_FUTURES.ws.1.0  BEQUANT.0  BEQUANT.ws.1.0  BEQUANT.ws.2.0  BEQUANT.ws.3.0  BEQUANT.ws.4.0  BINANCE-b38f7c.0  BINANCE-ee25be.0  BINANCE.0  BINANCE.http.0.0  BINANCE.ws.1.0  BINANCE_DELIVERY.0  BINANCE_DELIVERY.http.0.0  BINANCE_DELIVERY.http.6.0  BINANCE_DELIVERY.ws.1.0  BINANCE_DELIVERY.ws.7.0  BINANCE_FUTURES-1125a2.0  BINANCE_FUTURES.0  BINANCE_FUTURES.http.0.0  BINANCE_FUTURES.http.4.0  BINANCE_FUTURES.ws.1.0  BINANCE_FUTURES.ws.5.0  BINANCE_TR.0  BINANCE_TR.http.0.0  BINANCE_TR.ws.1.0  BINANCE_US-63b290.0  BINANCE_US.0  BINANCE_US.http.0.0  BINANCE_US.http.2.0  BINANCE_US.ws.1.0  BINANCE_US.ws.3.0  BIT.COM.0  BIT.COM.ws.1.0  BIT.COM.ws.2.0  BITCOINCOM-136c51.0  BITCOINCOM.0  BITCOINCOM.ws.1.0  BITCOINCOM.ws.2.0  (+138 more)
tests/: config_test.yaml  conftest.py  test_revamp_rest_api.py
tools/: backpack_auth_check.py  benchmark_cryptofeed.py  book_depth_test.py  book_test.py  bootstrap_trunk.sh  check-fallback.sh  check.sh  check_raw_dump.py  generate_test_data.py  performance_metrics.py  reformat-import-sections.sh  run_profiler.py  tools.py  websockets_test.py
(+293 files in other folders)
